# udl

./: CMakeLists.txt  config.h.in
UDLDataBase/: UdlDataBase.h
UDLMeasDev/: MeasDevTypes.h  UDLMeasDev.h  UDLMeasDevApi.h
UDLMeasDev/Test/: CMakeLists.txt  Makefile  Test.cpp  Test.h  Test.ini
UDLMeasDev/VC820/: CMakeLists.txt  Makefile  VC820.cpp  VC820.h  VC820.ini
UDLexamples/: SimpleMeasurement.udl  VC820.udl
UDLlib/: DynamicLib.cpp  DynamicLib.h  StringTools.cpp  StringTools.h  UdlSystem.cpp  UdlSystem.h  system.cpp  system.h
UDLlib/com/: SerialPort.cpp  SerialPort.h
UDLlib/getopt_pp/: getopt_pp.cpp  getopt_pp.h
UDLmain/: CMakeLists.txt  Makefile  UDLAction.cpp  UDLAction.h  UDLDataBase.cpp  UDLDataBase.h  UDLDevice.cpp  UDLDevice.h  UDLDevices.cpp  UDLDevices.h  UDLMain.cpp  UDLMeasDevice.cpp  UDLMeasDevice.h  UDLTask.cpp  UDLTask.h  UdlDbCsv.cpp  UdlDbCsv.h  UdlSettings.cpp  UdlSettings.h  UdlSettingsFile.cpp  UdlSettingsFile.h  UdlStdOut.cpp  UdlStdOut.h  udl.ini
